# JustAGameForAnInterview

./: .gitignore  .travis.yml  .travis_build.py  CMakeLists.txt  Readme.md  appveyor.yml  codecov.yml  conanfile.py
presentation/: Presentation.html  new_architecture.graphml  old_architecture.graphml
src/: console_input.cpp  console_input.hpp  core.hpp  input.hpp  input_provider.cpp  input_provider.hpp  main.cpp  output.cpp  output.hpp  simulation.cpp  simulation.hpp  system.hpp  tests.cpp  triggers.cpp  triggers.hpp  utility.cpp  utility.hpp
test/: tests.cpp
